# ios_aurora_push

./: .dockerignore  .gitignore  .prettierignore  .prettierrc  Dockerfile  README.md  app.js  docker-compose.yml  env_example  instrument.js  middleware.js  package-lock.json  package.json  process_scheduled_reminders.js  run_migrations.sh
.github/: dependabot.yml
.github/workflows/: docker-build.yml
chk-sig/: .gitignore  Cargo.toml  Makefile  README.md
chk-sig/src/: lib.rs
chk-sig/tari_chk_sig_js/: LICENSE  package.json  tari_chk_sig.d.ts  tari_chk_sig.js  tari_chk_sig_bg.wasm  tari_chk_sig_bg.wasm.d.ts
lib/: database.js  push_notifications.js  push_notifications_firebase.js  reminders.js
migrations/: 0001-initial.sql  0002-reminders.sql  0003-app-id-data.sql  0003-sandbox-support.sql  0004-token-size.sql
routes/: admin.js  cancel_reminders.js  health.js  index.js  register.js  send.js  sendFirebase.js
