[package]
name = "tari_chk_sig"
description = "Tari Wallet Signature Checker"
authors = ["The Tari Development Community"]
repository = "https://github.com/tari-project/tari"
categories = ["cryptography"]
homepage = "https://tari.com"
readme = "README.md"
license = "BSD-3-Clause"
version = "0.16.12" # Keep in line with Tari crypto
edition = "2018"

[dependencies]
tari_utilities = "0.7.0"
tari_crypto = "0.20.0"

serde = "1.0"
serde-wasm-bindgen = { version = "0.5.0" }
wasm-bindgen = { version = "^0.2", features = ["serde-serialize"] }

[build-dependencies]
cbindgen = "0.24.3"

[dev-dependencies]
wasm-bindgen-test = "0.3.36"
rand = { version = "0.8.5", default-features = false }
getrandom = { version = "0.2.3", default-features = false, features = ["js"] }

[lib]
crate-type = ["lib", "cdylib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz"]
